--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -9,7 +9,6 @@ body {
   font-family: 'Nunito', sans-serif;
 }
 
-// Hero Section
 .hero {
   position: relative;
   height: 14rem;
@@ -85,8 +84,6 @@ body {
     }
   }
 }
-
-// About Section
 .about-musician {
   display: flex;
   flex-direction: column;
@@ -223,7 +220,7 @@ body {
   }
 }
 
-// Gallery styles
+
 .gallery {
   text-align: center;
   margin: 0 auto;
@@ -259,10 +256,10 @@ body {
     border-radius: 2px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     object-fit: cover;
+    transition: filter 0.3s ease-in-out;
 
     @include tablet {
       flex: 1 1 30%;
-
       overflow-y: auto;
     }
 
@@ -272,7 +269,7 @@ body {
     }
   }
 }
-//Comment Section Styles
+
 .comment-section{
   max-width: 37rem;
   margin: auto;
@@ -289,7 +286,7 @@ body {
   align-items: flex-start;
   gap: 1rem;
   padding: 1rem;
-  background: $white; 
+  background: $white;
   border-radius: 8px;
   img {
     width: 50px;
@@ -313,36 +310,44 @@ body {
 }
 
 }
-
-//comment form
 .add-new{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap:0.75rem;
   margin-top: 1.5rem;
   padding:1rem;
   background: $white;
   border-radius: 4px;
+
   .form-header {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
   }
+  .comment-form{
+display: flex;
+flex-direction: column;
+
+  }
   label {
     font-size: 0.9rem;
     font-weight:medium;
     color: $silver;
   }
-  input, textarea {
+
+  input, textarea{
+
+    background-color:$silver;
     width: 80%;
-    color: $BandSite-DarkBlack;
+
+    color: $Mercury;
     padding: 0.5rem;
     border: 2px solid #ddd;
     border-radius: 5px;
     font-size: 1rem;
     font-weight: 200;
-  } 
+  }
   button {
     padding: 0.75rem;
     background:$BandSite-Black;
@@ -353,165 +358,5 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-.footer {
-  background-color:$BandSite-DarkBlack;
-  color: $white;
-  text-align: left;
-  padding: 20px;
-  font-family: 'Nunito';
-
-  @include tablet {
-    align-items: center;
-    text-align: center;
-  }
-
-  p {
-    font-weight: 300;
-  }
-
-  &__title {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 400;
-    margin-bottom: 20px;
-    font-family: 'Nunito';
-
-    @include tablet {
-      font-size: 2.25rem;
-      line-height: 2rem;
-      font-weight: 700;
-      padding: 30px;
-    }
-    @include desktop {
-      padding: 34px;
-    }
-  }
-
-  &__socials {
-    display: flex;
-    justify-content: flex-start;
-    gap: 1.25rem;
-    margin-bottom: 20px;
-
-    @include tablet {
-      margin-top: 35px;
-      margin-left: 1.25rem;
-      gap: 2.5rem;
-    }
-  }
-
-  &__details {
-    font-size: 0.9rem;
-    line-height: 1.4rem;
-    margin: 20px 0;
-
-    p:nth-child(3),
-    p:nth-child(6),
-    p:nth-child(9) {
-      margin-top: 10px;
-      margin-bottom: 20px;
-    }
-
-    @include tablet {
-      flex-direction: column;
-      align-items: center;
-      gap: 30px;
-    }
-  }
-
-  &__top-container {
-    @include tablet {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  }
-
-  &__header-container {
-    @include tablet {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-    }
-  }
-
-  &__logo {
-    margin-top: 1.875rem;
-    width: 7.5rem;
-    height: 1.25rem;
-  }
-
-  &__address-info {
-    display: flex;
-    flex-direction: column;
-
-    @include desktop {
-      flex-direction: column;
-    }
-  }
-
-  &__bottom-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    @include desktop {
-      flex-direction: column;
-    }
-  }
-
-  &__address-detai {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    @include tablet {
-      flex-direction: row;
-      gap: 40px;
-    }
-
-    @include desktop {
-      flex-direction: row;
-      gap: 2.5rem;
-      justify-content: center;
-      text-align: center;
-      align-items: center;
-    }
-  }
-
-  &__address-first,
-  &__address-second,
-  &__address-third {
-    text-align: left;
-  }
-
-  &__address-heading {
-    font-size: 0.875rem;
-    font-weight: 500;
-    font-family: 'Nunito';
-
-    @include tablet {
-      font-size: 1.5rem;
-    }
-  }
-
-  &__address-email {
-    font-size: 0.875rem;
-    font-family: 'Nunito';
-    font-weight: 400;
-  }
-
-  &__copyright {
-    margin-top: 10px;
-    font-size: 0.8125rem;
-    font-weight: 400;
-    font-family: 'Nunito';
-
-    @include tablet {
-      font-size: 0.875rem;
-    }
-  }
 }
 }
