--- a/styles/bio.css
+++ b/styles/bio.css
@@ -23,20 +23,20 @@
   align-items: center;
   background-color: #323232;
   width: 100%;
-  gap: 0.125rems;
-  padding: 0.625rem;
+  gap: 2pxs;
+  padding: 10px;
 }
 @media screen and (min-width: 768px) {
   .header {
     flex-direction: row;
-    padding: 2rem 2rem;
-    gap: 12.5rem;
+    padding: 32px 32px;
+    gap: 200px;
   }
 }
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 1rem 10rem;
-    gap: 12.5rem;
+    padding: 16px 160px;
+    gap: 200px;
   }
 }
 .header__logo {
@@ -52,7 +52,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  gap: 2rem;
+  gap: 32px;
   display: flex;
   justify-content: center;
 }
@@ -67,9 +67,9 @@
 .header__nav-link {
   text-decoration: none;
   color: #e1e1e1;
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 400;
-  padding: 10px 0;
+  padding: 0.625rem 0;
   display: block;
   font-family: Nunito Sans, sans-serif;
   position: relative;
@@ -81,16 +81,16 @@
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 700;
   }
 }
 
 .footer {
-  background-color: #000000;
+  background-color: #323232;
   color: #ffffff;
   text-align: left;
-  padding: 20px;
+  padding: 1.25rem;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
@@ -103,54 +103,54 @@
   font-weight: 300;
 }
 .footer__title {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 24px;
+  line-height: 32px;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__title {
-    font-size: 2.25rem;
-    line-height: 2rem;
+    font-size: 36px;
+    line-height: 32px;
     font-weight: 700;
-    padding: 30px;
+    padding: 1.875rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__title {
-    padding: 34px;
+    padding: 2.125rem;
   }
 }
 .footer__socials {
   display: flex;
   justify-content: flex-start;
-  gap: 1.25rem;
-  margin-bottom: 20px;
+  gap: 20px;
+  margin-bottom: 1.25rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials {
-    margin-top: 35px;
-    margin-left: 1.25rem;
-    gap: 2.5rem;
+    margin-top: 2.1875rem;
+    margin-left: 20px;
+    gap: 40px;
   }
 }
 .footer__details {
-  font-size: 0.9rem;
-  line-height: 1.4rem;
-  margin: 20px 0;
+  font-size: 14.4px;
+  line-height: 22.4px;
+  margin: 1.25rem 0;
 }
 .footer__details p:nth-child(3),
 .footer__details p:nth-child(6),
 .footer__details p:nth-child(9) {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.625rem;
+  margin-bottom: 1.25rem;
 }
 @media screen and (min-width: 768px) {
   .footer__details {
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -169,9 +169,9 @@
   }
 }
 .footer__logo {
-  margin-top: 1.875rem;
-  width: 7.5rem;
-  height: 1.25rem;
+  margin-top: 30px;
+  width: 120px;
+  height: 20px;
 }
 .footer__address-info {
   display: flex;
@@ -200,13 +200,13 @@
 @media screen and (min-width: 768px) {
   .footer__address-detai {
     flex-direction: row;
-    gap: 40px;
+    gap: 2.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__address-detai {
     flex-direction: row;
-    gap: 2.5rem;
+    gap: 40px;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -216,29 +216,29 @@
   text-align: left;
 }
 .footer__address-heading {
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 500;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__address-heading {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 }
 .footer__address-email {
-  font-size: 0.875rem;
+  font-size: 14px;
   font-family: "Nunito";
   font-weight: 400;
 }
 .footer__copyright {
-  margin-top: 10px;
-  font-size: 0.8125rem;
+  margin-top: 0.625rem;
+  font-size: 13px;
   font-weight: 400;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__copyright {
-    font-size: 0.875rem;
+    font-size: 14px;
   }
 }
 
@@ -340,26 +340,26 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 48px;
+    padding: 3rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .about-musician {
-    padding: 48px;
+    padding: 3rem;
   }
 }
 .about-musician__text {
   text-align: left;
-  padding: 24px 0;
+  padding: 1.5rem 0;
 }
 @media screen and (min-width: 768px) {
   .about-musician__text {
-    padding: 36px 0;
+    padding: 2.25rem 0;
   }
 }
 @media screen and (min-width: 1280px) {
   .about-musician__text {
-    padding: 38px 0;
+    padding: 2.375rem 0;
   }
 }
 .about-musician__heading-text {
@@ -404,7 +404,7 @@ body {
 }
 .about-musician__quote {
   margin: 0;
-  padding: 16px 0;
+  padding: 1rem 0;
   text-align: left;
   font-size: 0.875rem;
   font-family: "Nunito";
@@ -415,7 +415,7 @@ body {
 @media screen and (min-width: 768px) {
   .about-musician__quote {
     flex-direction: column;
-    padding: 36px 100px;
+    padding: 2.25rem 6.25rem;
     width: 100%;
     font-family: "Nunito";
     font-size: 1.5rem;
@@ -425,7 +425,7 @@ body {
 }
 @media screen and (min-width: 1280px) {
   .about-musician__quote {
-    padding: 40px 270px;
+    padding: 2.5rem 16.875rem;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: medium;
@@ -475,20 +475,23 @@ body {
 @media screen and (min-width: 768px) {
   .about-musician__info {
     display: flex;
-    gap: 15px;
+    align-items: flex-start;
+    border: 4px solid white;
+    gap: 0.93rem;
   }
 }
 
 .gallery {
   text-align: center;
   margin: 0 auto;
-  padding: 16px;
+  padding: 1rem;
 }
 .gallery__title {
   font-size: 1.5rem;
-  line-height: 32px;
+  line-height: 2rem;
+  text-align: left;
   font-weight: bold;
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .gallery__title {
@@ -510,8 +513,7 @@ body {
   max-width: 100%;
   aspect-ratio: 16/9;
   margin-bottom: 16px;
-  border-radius: 2px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 0.125rem;
   -o-object-fit: cover;
      object-fit: cover;
   transition: filter 0.3s ease-in-out;
@@ -524,7 +526,7 @@ body {
 }
 @media screen and (min-width: 1280px) {
   .gallery .gallery__item {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     overflow-y: auto;
   }
 }
@@ -548,38 +550,26 @@ body {
   gap: 1rem;
   padding: 1rem;
   background: #ffffff;
-  border-radius: 8px;
+  border-radius: 0.5rem;
+  border-bottom: 1px solid grey;
 }
 .comment img {
-  width: 50px;
-  height: 50px;
+  width: 3.12rem;
+  height: 3.12rem;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
-}
-.comment__component {
-  display: flex;
-  flex-direction: column;
-}
-.comment__component h3 {
-  margin: 0;
-  font-size: 1rem;
-  color: #333;
-}
-.comment__component p {
-  margin: 0.5rem 0 0;
-  font-size: 0.9rem;
-  color: #555;
 }
 
 .add-new {
   display: flex;
   flex-direction: row;
-  gap: 0.75rem;
+  gap: 1.75rem;
   margin-top: 1.5rem;
   padding: 1rem;
-  background: #ffffff;
-  border-radius: 4px;
+  border-radius: 0.25rem;
+  margin: 0.75rem 0.875rem;
+  border-bottom: 1px solid #e1e1e1;
 }
 .add-new .form-header {
   width: 50px;
@@ -587,25 +577,35 @@ body {
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
+  margin-left: 1.25rem;
 }
 .add-new .comment-form {
   display: flex;
   flex-direction: column;
+  width: 21.875rem;
+  align-items: baseline;
+  gap: 0.3125rem;
+  color: #323232;
+  margin-right: 1.25rem;
 }
 .add-new label {
-  font-size: 0.9rem;
-  font-weight: medium;
+  font-size: 13px;
+  line-height: 1.25rem;
+  font-weight: 700;
   color: #afafaf;
+  margin-top: 13px;
 }
 .add-new input, .add-new textarea {
-  background-color: #afafaf;
-  width: 80%;
-  color: #e1e1e1;
+  background-color: #ffffff;
+  width: 100%;
+  color: #323232;
   padding: 0.5rem;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: 200;
+  border: 2px solid #afafaf;
+  border-radius: 0.375rem;
+  font-size: 0.8125rem;
+  line-height: 18px;
+  font-weight: 400;
+  margin: 6px 16px;
 }
 .add-new button {
   padding: 0.75rem;
@@ -617,4 +617,8 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.form-title {
+  margin-left: 40px;
 }/*# sourceMappingURL=bio.css.map */
