--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -94,23 +94,23 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 48px;
+    padding: 3rem;
   }
 
   @include desktop {
-    padding: 48px;
+    padding: 3rem;
   }
 
   &__text {
     text-align: left;
-    padding: 24px 0;
+    padding: 1.5rem 0;
 
     @include tablet {
-      padding: 36px 0;
+      padding: 2.25rem 0;
     }
 
     @include desktop {
-      padding: 38px 0;
+      padding: 2.375rem 0;
     }
   }
 
@@ -151,7 +151,7 @@ body {
   }
   &__quote {
     margin: 0;
-    padding: 16px 0;
+    padding: 1rem 0;
     text-align: left;
     font-size: 0.875rem;
     font-family: 'Nunito';
@@ -161,7 +161,7 @@ body {
 
     @include tablet {
       flex-direction: column;
-      padding: 36px 100px;
+      padding: 2.25rem 6.25rem;
       width: 100%;
       font-family: 'Nunito';
       font-size: 1.5rem;
@@ -170,7 +170,7 @@ body {
     }
 
     @include desktop {
-      padding: 40px 270px;
+      padding: 2.5rem 16.875rem;
       font-size: 1.5rem;
       line-height: 2rem;
       font-weight: medium;
@@ -215,7 +215,9 @@ body {
   &__info {
     @include tablet {
       display: flex;
-      gap: 15px;
+      align-items: flex-start;
+      border:4px solid white;
+      gap: 0.93rem;
     }
   }
 }
@@ -224,13 +226,14 @@ body {
 .gallery {
   text-align: center;
   margin: 0 auto;
-  padding: 16px;
+  padding: 1rem;
 
   &__title {
     font-size: 1.5rem;
-    line-height: 32px;
+    line-height: 2rem;
+    text-align: left;
     font-weight: bold;
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
     @include tablet {
       font-size: 2.25rem;
       line-height: 2.75rem;
@@ -253,8 +256,7 @@ body {
     max-width: 100%;
     aspect-ratio: 16 / 9;
     margin-bottom: 16px;
-    border-radius: 2px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 0.125rem;
     object-fit: cover;
     transition: filter 0.3s ease-in-out;
 
@@ -264,7 +266,7 @@ body {
     }
 
     @include desktop {
-      margin-bottom: 20px;
+      margin-bottom: 1.25rem;
       overflow-y: auto;
     }
   }
@@ -287,66 +289,63 @@ body {
   gap: 1rem;
   padding: 1rem;
   background: $white;
-  border-radius: 8px;
+  border-radius: 0.5rem;
+  border-bottom: 1px solid grey;
   img {
-    width: 50px;
-    height: 50px;
+    width: 3.12rem;
+    height: 3.12rem;
     border-radius: 50%;
     object-fit: cover;
   }
-  &__component {
-    display: flex;
-    flex-direction: column;
-    h3 {
-      margin: 0;
-      font-size: 1rem;
-      color: #333;
-    }
-    p {
-      margin: 0.5rem 0 0;
-      font-size: 0.9rem;
-      color: #555;
-    }
-}
 
 }
 .add-new{
   display: flex;
   flex-direction: row;
-  gap:0.75rem;
+  gap:1.75rem;
   margin-top: 1.5rem;
   padding:1rem;
-  background: $white;
-  border-radius: 4px;
+  border-radius: .25rem;
+  margin: .75rem .875rem;
+  border-bottom: 1px solid $Mercury;
 
   .form-header {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
+    margin-left: 1.25rem;
   }
   .comment-form{
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    width: 21.875rem;
+    align-items: baseline;
+    gap: .3125rem;
+    color: $BandSite-Black;
+    margin-right: 1.25rem;
 
   }
   label {
-    font-size: 0.9rem;
-    font-weight:medium;
+    font-size: 13px;
+    line-height: 1.25rem;
+    font-weight: 700;
     color: $silver;
+    margin-top: 13px;
   }
 
   input, textarea{
 
-    background-color:$silver;
-    width: 80%;
-
-    color: $Mercury;
+    background-color:$white;
+    width: 100%;
+    color: $BandSite-Black;
     padding: 0.5rem;
-    border: 2px solid #ddd;
-    border-radius: 5px;
-    font-size: 1rem;
-    font-weight: 200;
+    border: 2px solid $silver;
+    border-radius: .375rem;
+    font-size: .8125rem;
+    line-height:18px;
+    font-weight: 400;
+    margin: 6px 16px
   }
   button {
     padding: 0.75rem;
@@ -359,4 +358,7 @@ flex-direction: column;
     border-radius: 4px;
     cursor: pointer;
 }
+}
+.form-title{
+  margin-left: 40px;
 }
