--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -89,6 +89,8 @@ body {
   flex-direction: column;
   padding: 1rem;
 
+
+
   @include tablet {
     display: flex;
     flex-direction: row;
@@ -100,13 +102,33 @@ body {
   @include desktop {
     padding: 3rem;
   }
-
+  &__quote{
+    font-size: .75rem;
+    line-height: 2rem;
+    padding: 2.5rem 16.875rem;
+    @include desktop{
+      font-size: 1.5rem;
+      line-height: 2rem;
+      padding: 2.5rem 16.875rem;
+    }
+  }
+  &__title{
+    font-weight: 400;
+    font-size: 36px;
+  }
+  &__info{
+    font-size: .875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
   &__text {
     text-align: left;
     padding: 1.5rem 0;
 
     @include tablet {
       padding: 2.25rem 0;
+
+
     }
 
     @include desktop {
@@ -125,10 +147,12 @@ body {
     @include tablet {
       font-size: 2.25rem;
       line-height: 2.75rem;
+      font-weight: 700;
     }
     @include desktop {
       font-size: 2.25rem;
       line-height: 2.75rem;
+      font-weight: 700;
     }
   }
 
@@ -161,7 +185,7 @@ body {
 
     @include tablet {
       flex-direction: column;
-      padding: 2.25rem 6.25rem;
+      padding: 1.5rem 10.875rem;
       width: 100%;
       font-family: 'Nunito';
       font-size: 1.5rem;
@@ -273,9 +297,12 @@ body {
 }
 
 .comment-section{
-  max-width: 55srem;
+  max-width: 55rem;
   margin: auto;
   padding: 1rem;
+  @include tablet{
+    max-width: 65rem;
+  }
 }
 .comment-list{
   display: flex;
@@ -291,7 +318,7 @@ body {
   gap: 1rem;
   padding: 1rem;
   background: $white;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
    border-bottom: 1px solid grey;
 
   img {
@@ -299,6 +326,7 @@ body {
     height: 3.12rem;
     border-radius: 50%;
     object-fit: cover;
+
   }
 
 }
@@ -312,12 +340,20 @@ body {
   border-radius: 0.25rem;
   border-bottom: 1px solid $Mercury;
   align-items: flex-start;
+  @include tablet{
+    width: 100%;
+    align-items: center;
+    justify-content:center;
+  }
 
   .form-header {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
+    @include tablet{
+      margin-bottom: 160px;
+    }
   }
 
   .comment-form {
@@ -327,6 +363,10 @@ body {
     gap: 0.5rem;
     color: $BandSite-Black;
     width: 16.875rem;
+    @include tablet{
+      width: 32.5rem;
+
+    }
 
     label {
       font-size: .8125rem;
@@ -346,6 +386,7 @@ body {
       font-size: 0.8125rem;
       font-weight: 400;
       margin: 0;
+      height: 40px;
     }
 
     textarea {
@@ -368,6 +409,12 @@ body {
       align-self: flex-end;
       margin-top: 0.5rem;
       transition: background-color 0.3s ease;
+      @include tablet{
+        width: 30%;
+      }
+      @include desktop{
+        width: 35%;
+      }
 
       &:hover {
         background-color: $BandSite-DarkBlack;
