--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -309,6 +309,11 @@ body {
   flex-direction: column;
   gap:1rem;
   margin: 0 auto;
+  @include tablet{
+    justify-content: center;
+    max-width: 53.125rem;
+    padding-bottom: 2rem;
+  }
 
 
 }
@@ -330,6 +335,9 @@ body {
   }
 
 }
+.form-container{
+  border-bottom: 1px solid $Mercury;
+}
 .add-new {
   display: flex;
   flex-direction: row;
@@ -338,7 +346,7 @@ body {
   padding: 1rem;
   width: 90%;
   border-radius: 0.25rem;
-  border-bottom: 1px solid $Mercury;
+
   align-items: flex-start;
   @include tablet{
     width: 100%;
