--- a/styles/bio.css
+++ b/styles/bio.css
@@ -23,20 +23,20 @@
   align-items: center;
   background-color: #323232;
   width: 100%;
-  gap: 2px;
-  padding: 10px;
+  gap: 0.125rem;
+  padding: 0.625rem;
 }
 @media screen and (min-width: 768px) {
   .header {
     flex-direction: row;
-    padding: 32px 32px;
-    gap: 200px;
+    padding: 2rem 2rem;
+    gap: 12.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 16px 160px;
-    gap: 200px;
+    padding: 1rem 10rem;
+    gap: 12.5rem;
   }
 }
 .header__logo {
@@ -67,7 +67,7 @@
 .header__nav-link {
   text-decoration: none;
   color: #e1e1e1;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
   padding: 0.625rem 0;
   display: block;
@@ -82,9 +82,9 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: -2px;
+  bottom: -0.125rem;
   width: min(100%, 1fr);
-  height: 2px;
+  height: 0.125rem;
   background-color: #ffffff;
   transition: width 0.3s ease-in-out;
 }
@@ -93,7 +93,7 @@
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
   }
 }
@@ -574,6 +574,12 @@ body {
 @media screen and (min-width: 768px) {
   .comment-section {
     max-width: 65rem;
+    flex: 1;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .comment-section {
+    flex: 1;
   }
 }
 
@@ -600,7 +606,7 @@ body {
   border-radius: 0.25rem;
   border-bottom: 1px solid grey;
 }
-.comment img {
+.comment__avatar {
   width: 3.12rem;
   height: 3.12rem;
   border-radius: 50%;
@@ -608,11 +614,11 @@ body {
      object-fit: cover;
 }
 
-.form-container {
+.section__container {
   border-bottom: 1px solid #e1e1e1;
 }
 
-.add-new {
+.comment-form {
   display: flex;
   flex-direction: row;
   gap: 1.75rem;
@@ -623,62 +629,22 @@ body {
   align-items: flex-start;
 }
 @media screen and (min-width: 768px) {
-  .add-new {
+  .comment-form {
     width: 100%;
     align-items: center;
     justify-content: center;
   }
 }
-.add-new .form-header {
-  width: 50px;
-  height: 50px;
+.comment-form__avatar {
+  width: 3.12rem;
+  height: 3.12rem;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-@media screen and (min-width: 768px) {
-  .add-new .form-header {
-    margin-bottom: 160px;
-  }
-}
-.add-new .comment-form {
-  display: flex;
-  flex-direction: column;
-  width: 21.875rem;
-  gap: 0.5rem;
-  color: #323232;
-  width: 16.875rem;
-}
-@media screen and (min-width: 768px) {
-  .add-new .comment-form {
-    width: 32.5rem;
-  }
-}
-.add-new .comment-form label {
-  font-size: 0.8125rem;
-  font-weight: 700;
-  color: #afafaf;
-  margin-top: 0.625rem;
-}
-.add-new .comment-form input,
-.add-new .comment-form textarea {
-  background-color: #ffffff;
-  width: 100%;
-  color: #323232;
-  padding: 0.5rem;
-  border: 2px solid #afafaf;
-  border-radius: 0.25rem;
-  font-size: 0.8125rem;
-  font-weight: 400;
-  margin: 0;
-  height: 40px;
-}
-.add-new .comment-form textarea {
-  resize: none;
-  min-height: 100px;
-}
-.add-new .comment-form button {
+.comment-form__button {
   background-color: #323232;
+  font-style: Nunito Sans, sans-serif;
   color: white;
   border: none;
   padding: 0.625rem 1rem;
@@ -694,19 +660,52 @@ body {
   transition: background-color 0.3s ease;
 }
 @media screen and (min-width: 768px) {
-  .add-new .comment-form button {
+  .comment-form__button {
     width: 30%;
   }
 }
 @media screen and (min-width: 1280px) {
-  .add-new .comment-form button {
+  .comment-form__button {
     width: 35%;
   }
 }
-.add-new .comment-form button:hover {
+.comment-form__button:hover {
   background-color: #000000;
 }
-
-.form-title {
-  margin-left: 40px;
+.comment-form__fields {
+  display: flex;
+  flex-direction: column;
+  width: 21.875rem;
+  gap: 0.5rem;
+  color: #323232;
+  width: 16.875rem;
+}
+@media screen and (min-width: 768px) {
+  .comment-form__fields {
+    width: 32.5rem;
+  }
+}
+.comment-form__fields__label {
+  font-size: 0.8125rem;
+  font-weight: 700;
+  color: #afafaf;
+  margin-top: 0.625rem;
+}
+.comment-form__fields input,
+.comment-form__fields textarea {
+  background-color: #ffffff;
+  width: 100%;
+  color: #323232;
+  padding: 0.5rem;
+  border: 2px solid #afafaf;
+  border-radius: 0.25rem;
+  font-size: 0.8125rem;
+  font-weight: 400;
+  margin: 0;
+  font-family: Nunito Sans, sans-serif;
+  height: 40px;
+}
+.comment-form__fields textarea {
+  resize: none;
+  min-height: 100px;
 }/*# sourceMappingURL=bio.css.map */
