--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,13 +1,13 @@
-@use 'partials/variables' as *;
-@use 'partials/mixins' as *;
-@use 'partials/global' as *;
-@use 'partials/typography' as *;
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Nunito', sans-serif;
-}
+@use "partials/variables" as *;
+@use "partials/mixins" as *;
+@use "partials/global" as *;
+@use "partials/typography" as *;
+
+// @media (min-width: 768px) {
+//   body {
+//     padding: 36px;
+//   }
+// }
 
 .hero {
   position: relative;
@@ -29,7 +29,7 @@ body {
     display: flex;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
@@ -48,11 +48,13 @@ body {
   }
 
   &__text {
-    font-family: 'Nunito';
+    font-family: "Nunito";
+    font-size: 1.5rem;
+    line-height: 2rem;
     font-weight: 700;
     position: absolute;
     top: 50%;
-    left: 25%;
+    left: 20%;
     transform: translate(-50%, -50%);
     z-index: 2;
     text-align: center;
@@ -69,7 +71,7 @@ body {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: 'Nunito';
+    font-family: "Nunito";
     color: $white;
 
     @include tablet {
@@ -100,35 +102,42 @@ body {
   @include desktop {
     padding: 3rem;
   }
-  &__quote{
-    font-size: .75rem;
+  &__quote {
+    font-size: 0.75rem;
     line-height: 2rem;
     padding: 2.5rem 16.875rem;
-    @include desktop{
+    @include desktop {
       font-size: 1.5rem;
       line-height: 2rem;
       padding: 2.5rem 16.875rem;
     }
   }
-  &__title{
+  &__title {
     font-weight: 400;
     font-size: 36px;
   }
-  &__info{
-    font-size: .875rem;
+  &__info {
+    font-size: 0.875rem;
     line-height: 1.375rem;
     font-weight: 400;
   }
   &__text {
     text-align: left;
-    padding: 1.5rem 0;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
 
     @include tablet {
-      padding: 2.25rem 0;
+      padding-top: 3rem;
+      padding: bottom 2.25rem;
+      font-size: 2.25rem;
+      line-height: 2.75rem;
     }
 
     @include desktop {
-      padding: 2.375rem 0;
+      padding-top: 3rem;
     }
   }
 
@@ -136,7 +145,7 @@ body {
     margin: 0;
     font-size: 1.5rem;
     line-height: 2rem;
-    font-family: 'Nunito';
+    font-family: "Nunito";
     font-weight: 700;
     color: $BandSite-Black;
 
@@ -174,7 +183,7 @@ body {
     padding: 1rem 0;
     text-align: left;
     font-size: 0.875rem;
-    font-family: 'Nunito';
+    font-family: "Nunito";
     line-height: 1.35rem;
     font-weight: 700;
     color: $BandSite-Black;
@@ -183,7 +192,7 @@ body {
       flex-direction: column;
       padding: 1.5rem 10.875rem;
       width: 100%;
-      font-family: 'Nunito';
+      font-family: "Nunito";
       font-size: 1.5rem;
       line-height: 2rem;
       font-weight: medium;
@@ -212,7 +221,7 @@ body {
       font-size: 1.5rem;
       line-height: 1.375rem;
       font-weight: 500;
-      font-family: 'Nunito';
+      font-family: "Nunito";
       display: flex;
       flex-direction: column;
     }
@@ -224,7 +233,7 @@ body {
   &__description-text {
     font-weight: 400;
     font-size: 0.8125rem;
-    font-family: 'Nunito';
+    font-family: "Nunito";
     line-height: 1.125rem;
     @include tablet {
       font-size: 0.875rem;
@@ -236,7 +245,7 @@ body {
     @include tablet {
       display: flex;
       align-items: flex-start;
-      border:4px solid white;
+      border: 4px solid white;
       gap: 0.93rem;
     }
   }
@@ -290,55 +299,52 @@ body {
   }
 }
 
-.comment-section{
+.comment-section {
   max-width: 55rem;
   margin: auto;
   padding: 1rem;
-  @include tablet{
+  @include tablet {
     max-width: 65rem;
     flex: 1;
   }
-  @include desktop{
-    flex:1;
+  @include desktop {
+    flex: 1;
   }
 }
-.comment-list{
+.comment-list {
   display: flex;
   flex-direction: column;
-  gap:rem;
+  gap: rem;
   margin: 0 auto;
-  @include tablet{
+  @include tablet {
     justify-content: center;
     max-width: 53.125rem;
     padding-bottom: 2rem;
   }
-
-
 }
-.comment{
+.comment {
   display: flex;
   align-items: flex-start;
   gap: 1rem;
   padding: 1rem;
   background: $white;
   border-radius: 0.25rem;
-   border-bottom: 1px solid grey;
+  border-bottom: 1px solid grey;
 
-   &__avatar  {
+  &__avatar {
     width: 3.12rem;
     height: 3.12rem;
     border-radius: 50%;
     object-fit: cover;
-
   }
- img{
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  object-fit: cover;
+  img {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+  }
 }
-}
-.section__container{
+.section__container {
   border-bottom: 1px solid $Mercury;
 }
 .comment-form {
@@ -351,17 +357,16 @@ body {
   border-radius: 0.25rem;
 
   align-items: flex-start;
-  @include tablet{
+  @include tablet {
     width: 100%;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
   }
-  &__avatar  {
+  &__avatar {
     width: 3.12rem;
     height: 3.12rem;
     border-radius: 50%;
     object-fit: cover;
-
   }
   &__button {
     background-color: $BandSite-Black;
@@ -379,10 +384,10 @@ body {
     align-self: flex-end;
     margin-top: 0.5rem;
     transition: background-color 0.3s ease;
-    @include tablet{
+    @include tablet {
       width: 30%;
     }
-    @include desktop{
+    @include desktop {
       width: 35%;
     }
 
@@ -391,34 +396,32 @@ body {
     }
   }
 
-
-  &__fields{
+  &__fields {
     display: flex;
     flex-direction: column;
     width: 21.875rem;
     gap: 0.5rem;
     color: $BandSite-Black;
     width: 16.875rem;
-    @include tablet{
+    @include tablet {
       width: 32.5rem;
-
     }
 
     &__label {
-      font-size: .8125rem;
+      font-size: 0.8125rem;
       font-weight: 700;
       color: $silver;
-      margin-top: .625rem;
+      margin-top: 0.625rem;
     }
 
     input,
     textarea {
       background-color: $white;
       width: 100%;
-      color:$BandSite-Black;
+      color: $BandSite-Black;
       padding: 0.5rem;
       border: 2px solid $silver;
-      border-radius: .25rem;
+      border-radius: 0.25rem;
       font-size: 0.8125rem;
       font-weight: 400;
       margin: 0;
@@ -429,6 +432,5 @@ body {
       resize: none;
       min-height: 100px;
     }
-
   }
 }
