--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,12 +3,6 @@
 @use "partials/global" as *;
 @use "partials/typography" as *;
 
-// @media (min-width: 768px) {
-//   body {
-//     padding: 36px;
-//   }
-// }
-
 .hero {
   position: relative;
   height: 14rem;
@@ -48,7 +42,7 @@
   }
 
   &__text {
-    font-family: "Nunito";
+    font-family: $font-stack;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
@@ -235,14 +229,15 @@
     font-size: 0.8125rem;
     font-family: "Nunito";
     line-height: 1.125rem;
-    @include tablet {
+
+      @include tablet {
       font-size: 0.875rem;
       font-weight: 400;
       line-height: 1.375rem;
     }
   }
   &__info {
-    @include tablet {
+      @include tablet {
       display: flex;
       align-items: flex-start;
       border: 4px solid white;
@@ -278,7 +273,6 @@
 
   .gallery__item {
     aspect-ratio: 16 / 9;
-
     flex: 1 1 100%;
     max-width: 100%;
     aspect-ratio: 16 / 9;
@@ -344,9 +338,11 @@
     object-fit: cover;
   }
 }
+
 .section__container {
   border-bottom: 1px solid $Mercury;
 }
+
 .comment-form {
   display: flex;
   flex-direction: row;
@@ -362,12 +358,14 @@
     align-items: center;
     justify-content: center;
   }
+
   &__avatar {
     width: 3.12rem;
     height: 3.12rem;
     border-radius: 50%;
     object-fit: cover;
   }
+
   &__button {
     background-color: $BandSite-Black;
     font-style: $font-stack;
@@ -390,12 +388,10 @@
     @include desktop {
       width: 35%;
     }
-
     &:hover {
       background-color: $BandSite-DarkBlack;
     }
   }
-
   &__fields {
     display: flex;
     flex-direction: column;
@@ -406,7 +402,6 @@
     @include tablet {
       width: 32.5rem;
     }
-
     &__label {
       font-size: 0.8125rem;
       font-weight: 700;
@@ -428,9 +423,11 @@
       font-family: $font-stack;
       height: 40px;
     }
+
     textarea {
       resize: none;
       min-height: 100px;
+      font-family: $font-stack;
     }
   }
 }
