--- a/styles/bio.css
+++ b/styles/bio.css
@@ -24,13 +24,20 @@ input:invalid {
   outline-color: red;
 }
 
+.label {
+  font-size: 0.8125rem;
+  font-weight: 700;
+  color: #ffffff;
+  margin-top: 0.625rem;
+}
+
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #323232;
   width: 100%;
-  padding: 10px 10px 0;
+  padding: 0.625rem 10px 0;
 }
 @media screen and (min-width: 768px) {
   .header {
@@ -97,7 +104,7 @@ input:invalid {
 }
 @media screen and (min-width: 768px) {
   .header__nav-link {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
   }
 }
@@ -119,16 +126,16 @@ input:invalid {
   font-weight: 300;
 }
 .footer__title {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 400;
   margin-bottom: 1.25rem;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__title {
-    font-size: 36px;
-    line-height: 32px;
+    font-size: 2.25rem;
+    line-height: 2rem;
     font-weight: 700;
     padding: 1.875rem;
   }
@@ -141,19 +148,19 @@ input:invalid {
 .footer__socials {
   display: flex;
   justify-content: flex-start;
-  gap: 20px;
+  gap: 1.25rem;
   margin-bottom: 1.25rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials {
     margin-top: 2.1875rem;
-    margin-left: 20px;
-    gap: 40px;
+    margin-left: 1.25rem;
+    gap: 2.5rem;
   }
 }
 .footer__details {
-  font-size: 14.4px;
-  line-height: 22.4px;
+  font-size: 0.9rem;
+  line-height: 1.4rem;
   margin: 1.25rem 0;
 }
 .footer__details p:nth-child(3),
@@ -222,7 +229,7 @@ input:invalid {
 @media screen and (min-width: 1280px) {
   .footer__address-detai {
     flex-direction: row;
-    gap: 40px;
+    gap: 2.5rem;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -232,29 +239,29 @@ input:invalid {
   text-align: left;
 }
 .footer__address-heading {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 500;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__address-heading {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 }
 .footer__address-email {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-family: "Nunito";
   font-weight: 400;
 }
 .footer__copyright {
   margin-top: 0.625rem;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 400;
   font-family: "Nunito";
 }
 @media screen and (min-width: 768px) {
   .footer__copyright {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 
@@ -540,15 +547,19 @@ input:invalid {
   background-color: #fafafa;
 }
 .gallery__title {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
   line-height: 2rem;
   text-align: left;
-  font-weight: bold;
+  font-weight: 700;
   margin-bottom: 1.5rem;
   color: #323232;
 }
 @media screen and (min-width: 768px) {
   .gallery__title {
+    padding-top: 3rem;
+    padding-bottom: 2.25rem;
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
@@ -600,6 +611,11 @@ input:invalid {
   .comment-section {
     flex: 1;
   }
+}
+.comment-section__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
 }
 
 .comment-list {
@@ -706,32 +722,27 @@ input:invalid {
   flex-direction: column;
   width: 100%;
   gap: 0.5rem;
-  color: #323232;
+  font-size: 0.8125rem;
+  font-weight: 500;
+  color: #afafaf;
+  margin-top: 0.625rem;
 }
 @media screen and (min-width: 768px) {
   .comment-form__fields {
     width: 32.5rem;
   }
 }
-.comment-form__fields__label {
-  font-size: 0.8125rem;
-  font-weight: 700;
-  color: #afafaf;
-  margin-top: 0.625rem;
-}
 .comment-form__fields input,
 .comment-form__fields textarea {
-  background-color: #ffffff;
-  width: 100%;
+  background-color: #fafafa;
   color: #323232;
-  padding: 0.5rem;
-  border: 2px solid #afafaf;
+  padding: 0.5rem 2rem;
+  border: 0.125rem solid #afafaf;
   border-radius: 0.25rem;
-  font-size: 0.8125rem;
   font-weight: 400;
-  margin: 0;
+  /* margin: 0; */
   font-family: Nunito Sans, sans-serif;
-  height: 40px;
+  height: 2.5rem;
 }
 .comment-form__fields textarea {
   resize: none;
